Added resize function.

--- a/demo/index.html
+++ b/demo/index.html
@@ -67,6 +67,7 @@
         </div><!-- end api -->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="../src/js/jquery.debouncedresize.js"></script>
 <script src="../src/js/jquery.flipster.js"></script>
 <script>
 <!--
