Updated destroy function to remove nav.

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,31 +23,31 @@
 <!-- Flipster List -->
         <div class="flipster">
           <ul>
-            <li>
+            <li id="Coverflow-1" title="All Features">
                 <a href="demo.html" class="Button Block">
                     <h1>All Features</h1>
                     <p>Showcase of all available features in both the Coverflow and Carousel styles</p>
                 </a>
             </li>
-            <li>
+            <li id="Coverflow-2" title="Basic Setup">
                 <a href="demo2.html" class="Button Block">
                     <h1>Basic Setup</h1>
                     <p>The bare minimum code needed to implement Flipster</p>
                 </a>
             </li>
-            <li>
+            <li id="Coverflow-3" title="Carousel">
                 <a href="demo3.html" class="Button Block">
                     <h1>Carousel</h1>
                     <p>Roundabout carousel style!</p>
                 </a>
             </li>
-            <li>
+            <li id="Coverflow-4" title="Coverflow Tab Navigation">
                 <a href="demo4.html" class="Button Block">
                     <h1>Coverflow with Tab Navigation</h1>
                     <p>Example of tab navigation using the <code>enableNav</code> option</p>
                 </a>
             </li>
-            <li>
+            <li id="Coverflow-5" title="Carousel Tab Navigation">
                 <a href="demo5.html" class="Button Block">
                     <h1>Carousel with Tab Navigation</h1>
                     <p>Example of tab navigation using the <code>enableNav</code> option</p>
