Removed hidden classes from coverflow.

--- a/demo/index.html
+++ b/demo/index.html
@@ -78,8 +78,7 @@
         // Public API Examples
         var demo = {};
             demo.flipster = $(".flipster").flipster({
-                style: 'carousel',
-                start: 0,
+                style: 'coverflow',
                 enableNav: true,
                 navPosition: 'after'
         });
